--- a/templates/_base.css
+++ b/templates/_base.css
@@ -6,7 +6,7 @@
     LICENSE: see the LICENSE.txt file. If file is missing, this file is subject to the AFL 3.0
     license at the following url: http://www.opensource.org/licenses/afl-3.0.php.
 */
-@import url(_UIBlocker.css);
+@import url(../../_UIBlocker.css);
 
 HTML {
     /* this is vital for IE6 to behave properly */
