--- a/templates/cujo.headline.html
+++ b/templates/cujo.headline.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML>
 <html class="cujo-stretch cujo-headline">
 <!--
     cujo.headline
@@ -15,9 +15,12 @@
 <script src="../../dojo/dojo.js" type="text/javascript"></script>
 <script src="../cujo.js" type="text/javascript"></script>
 
-<link type="text/css" rel="stylesheet" href="../theme/css/headline.css"/>
 <script type="text/javascript">
-//cujo.requireCss('../cujo/cujo.css');
+
+    // even better than this is to @import() these into your base css file.
+    cujo.requireCss('dijit.themes.claro.claro', {cssx: false});
+    cujo.requireCss('cujo.templates.headline');
+
 </script>
 
 </head>
