--- a/tests/ie6layoutTests.css
+++ b/tests/ie6layoutTests.css
@@ -7,7 +7,7 @@
     license at the following url: http://www.opensource.org/licenses/afl-3.0.php.
 */
 @import url(_baseCssTest.css);
-@import url(../theme/css/headline.css);
+@import url(../templates/headline.css);
 
 .inlineBlock {
     display: inline-block;
