--- a/templates/cujo.headline.html
+++ b/templates/cujo.headline.html
@@ -12,14 +12,15 @@
 
 <title>Cujo cujo.headline Template</title>
 
-<script src="../../dojo/dojo.js" type="text/javascript"></script>
-<script src="../cujo.js" type="text/javascript"></script>
+<!-- modify these lines to point to your actual dojo and cujo folders -->
+<script src="../dojo/dojo.js" type="text/javascript"></script>
+<script src="../cujo/cujo.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
     // even better than this is to @import() these into your base css file.
     cujo.requireCss('dijit.themes.claro.claro', {cssx: false});
-    cujo.requireCss('cujo.templates.headline');
+    cujo.requireCss('cujo.common.headline');
 
 </script>
 
