--- a/cujo/common/headline.css
+++ b/cujo/common/headline.css
@@ -3,6 +3,8 @@
     (c) copyright 2010, unscriptable.com
     author: john
 
+OBSOLETE. DO NOT USE.
+
     LICENSE: see the LICENSE.txt file. If file is missing, this file is subject to the AFL 3.0
     license at the following url: http://www.opensource.org/licenses/afl-3.0.php.
 */
