--- a/cujo/widget/grid/TextGrid.css
+++ b/cujo/widget/grid/TextGrid.css
@@ -1,11 +1,11 @@
-@import url(Grid.css);
+/*@import url(Grid.css);*/
 
 .cujo-grid .cujo-header {
 	/* to match the height of the cells in the header TODO: use a constant in the Table.scss file */
-	height: 40px;
+	height: 30px;
 }
 
 .cujo-grid .cujo-body {
 	/* to match the height of the cells in the header TODO: use a constant in the Table.scss file */
-	top: 40px;
+	top: 30px;
 }
